# LOGENESIS-1.5

./: .env.example  AGENTS.md  CODEX.md  LOGENESIS_AETHERBUS_REPORT_TH.md  LOGENESIS_STATE_VECTOR_V1_TH.md  README.md  pyproject.toml  requirements.txt  ruleset.json
.github/workflows/: ci.yml  codeql.yml  package.yml  smoke.yml
config/: memory_policy.yaml  routing_policy.yaml  ruleset.yaml  verifier_policy.yaml
docs/: CREATE_PLATFORM_WORK.md  LOGENESIS_1_5C_CONTEXT_GOVERNED_MODEL_TH.md  LOGENESIS_UNIFIED_REASONING_ARCHITECTURE.md  RFC-LGN-1.5-001.md
docs/architecture/: OFFICIAL_FULLSTACK_INTEGRATION_REPORT_TH.md  api-contracts.md  module-map.md  request-lifecycle.md
docs/decisions/: ADR-0001-reference-stack.md  ADR-0002-lifecycle-behavior-completion.md
docs/flows/: context-repair.md  contradiction-detection.md  long-context-conversation.md  memory-commit.md  optional-multipath.md  simple-chat-turn.md  topic-switch-return.md
docs/rfc/: RFC-LGN-1.5-001.md
docs/schemas/: ContextPacket.md  DialogueLedger.md  DialogueState.md  IntentFrame.md  MemoryRecord.md  ThoughtNode.md  TopicFrame.md  VerificationResult.md
examples/: contradiction_case.py  deliberative_memory_cycle.py  memory_commit_case.py  simple_chat.py  topic_return_case.py
src/: main.py  simulate_porisjem.py
src/logenesis/: __init__.py  (+3 more)
tests/: conftest.py  test_aetherbus_envelope.py  test_cogitator_x.py  test_memory_and_agents.py  test_miras_commit_policy.py  test_platform_extensions.py  test_porisjem.py  test_public_contracts.py  test_reasoning_search_episode.py  test_resonance_mapper.py
(+88 files in other folders)
